--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT=3000
 DB_URL=mongodb+srv://parth:mLrvPZ2TGxFYvvcL@cluster0.4ihm6s3.mongodb.net/?retryWrites=true&w=majority
 SECRET=NOWISTHEBESTTIJSDIMETOMAKESENSE
+NODE_ENV=production
